--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "react-router-dom": "^6.26.2",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-autolink-headings": "^7.1.0",
     "remark-gfm": "^4.0.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
